Fixed overflow of highlight box in blog articles

--- a/_sass/components/_blog-article.scss
+++ b/_sass/components/_blog-article.scss
@@ -62,6 +62,7 @@ $blog-article--margin--CENTERED: 5*$br auto;
         padding: $br;
         font-size: 16px;
         line-height: 1.5;
+        overflow: scroll;
     }
 
     img {
